--- a/Lesson2/bài về nhà.html
+++ b/Lesson2/bài về nhà.html
@@ -59,6 +59,7 @@
             
             </table>
          </div>
+         <!-- bài2 -->
     </div>
 
     <div style="margin-left: auto; margin-right: auto; margin-top:30px;  width: 90%;">
