--- a/Lesson4/bài về nhà.html
+++ b/Lesson4/bài về nhà.html
@@ -33,6 +33,12 @@
     <div class="rightside-5 center">Right sidebar</div>
   </div>
   <footer>Footer</footer>
-    
+    <!-- bài 4 -->
+  <div class="leftside-6">leftside</div>
+  <div class="container-6">
+    <header class="header-6 center6">Header</header>
+    <div class="content-6 center6">Content</div>
+    <footer class="footer-6 center6">Footer</footer>
+  </div>
 </body>
 </html>
