--- a/Lesson5 Responsive/bài kiểm tra.html
+++ b/Lesson5 Responsive/bài kiểm tra.html
@@ -31,7 +31,7 @@
 </div>
     <div><h1> 💨 Speakers</h1></div>
     <div class="card-list">
-        <div class="card-item">
+        <div class="card-item center1">
 
             <div class="card-left">
                 <img class="card-avatar"
@@ -67,7 +67,7 @@
 
         </div>
 
-        <div class="card-item">
+        <div class="card-item center2">
 
             <div class="card-left">
                 <img class="card-avatar"
@@ -103,7 +103,7 @@
 
         </div>
 
-        <div class="card-item">
+        <div class="card-item center3">
 
             <div class="card-left">
                 <img class="card-avatar"
@@ -139,7 +139,7 @@
 
         </div>
 
-        <div class="card-item">
+        <div class="card-item center4">
 
             <div class="card-left">
                 <img class="card-avatar"
@@ -175,7 +175,7 @@
 
         </div>
 
-        <div class="card-item">
+        <div class="card-item center5">
 
             <div class="card-left">
                 <img class="card-avatar"
@@ -211,7 +211,7 @@
 
         </div>
 
-        <div class="card-item">
+        <div class="card-item center6">
 
             <div class="card-left">
                 <img class="card-avatar"
