--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -14,11 +14,11 @@
         this is my header
     
     </div>
-    <!-- <div class="menu">
+    <div class="menu">
         this is my menu
         fixed on top when scrolling
 
-    </div> -->
+    </div>
     <div id="box-1" class="box">Box1
         <div id="box-2" class="box">Box2</div>
         <div id="box-3" class="box">Box3</div>
